Bug 402567: make scrollframe GetMinWidth return the scrolled frame's min-width. r+sr=dbaron a=blocking1.9